# codeagent

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  TDD_PLAN.md  mise.toml
crates/forge-cli/: Cargo.toml
crates/forge-cli/src/: config.rs  main.rs
crates/forge-cli/tests/: e2e.rs
crates/forge-core/: Cargo.toml
crates/forge-core/src/: agent.rs  context.rs  lib.rs  noop.rs  traits.rs  types.rs
crates/forge-core/tests/: agent.rs  compaction.rs  context.rs  retriever_swap.rs
crates/forge-gateway/: Cargo.toml
crates/forge-gateway/src/: daemon.rs  lib.rs  prompter.rs  session.rs
crates/forge-gateway/tests/: gateway.rs
crates/forge-lsp/: Cargo.toml
crates/forge-lsp/src/: handler.rs  lib.rs  prompter.rs
crates/forge-lsp/tests/: protocol.rs
crates/forge-mcp/: Cargo.toml
crates/forge-mcp/src/: client.rs  lib.rs  manager.rs  protocol.rs  tool.rs
crates/forge-mcp/tests/: client.rs  lifecycle.rs  protocol.rs
crates/forge-memory/: Cargo.toml
crates/forge-memory/src/: combined.rs  compaction.rs  forgemd.rs  fts_store.rs  hybrid.rs  indexer.rs  lib.rs  memory_db.rs  session.rs  vec_store.rs
crates/forge-memory/src/embedding/: gemini.rs  mod.rs  openai.rs
crates/forge-memory/tests/: embedding.rs  hybrid.rs  indexer.rs
crates/forge-model/: Cargo.toml
crates/forge-model/src/: anthropic.rs  format.rs  lib.rs  model_id.rs  openai_provider.rs  router.rs  sse.rs
crates/forge-permissions/: Cargo.toml
crates/forge-permissions/src/: gateway.rs  lib.rs  profile.rs  rule.rs
crates/forge-permissions/tests/: gateway.rs
crates/forge-test-utils/: Cargo.toml
crates/forge-test-utils/src/: lib.rs
crates/forge-tools/: Cargo.toml
crates/forge-tools/src/: bash.rs  edit.rs  glob_tool.rs  grep.rs  lib.rs  memory_save.rs  memory_search.rs  permission_executor.rs  read.rs  registry.rs  write.rs
crates/forge-tools/src/skills/: executor.rs  mod.rs  scanner.rs
crates/forge-tools/tests/: memory_tools.rs  skills.rs
crates/forge-tui/: Cargo.toml
crates/forge-tui/src/: display.rs  input.rs  lib.rs  prompter.rs
crates/forge-tui/tests/: prompter.rs
