[workspace]
resolver = "2"
members = [
    "crates/forge-core",
    "crates/forge-model",
    "crates/forge-memory",
    "crates/forge-tools",
    "crates/forge-permissions",
    "crates/forge-tui",
    "crates/forge-lsp",
    "crates/forge-gateway",
    "crates/forge-mcp",
    "crates/forge-cli",
    "crates/forge-test-utils",
]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tokio-stream = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# HTTP
reqwest = { version = "0.12", features = ["stream", "json"] }

# Tools
glob = "0.3"
regex = "1"
jsonschema = "0.26"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
mockall = "0.13"
tempfile = "3"

# Internal crates
forge-core = { path = "crates/forge-core" }
forge-model = { path = "crates/forge-model" }
forge-memory = { path = "crates/forge-memory" }
forge-tools = { path = "crates/forge-tools" }
forge-permissions = { path = "crates/forge-permissions" }
forge-tui = { path = "crates/forge-tui" }
forge-lsp = { path = "crates/forge-lsp" }
forge-gateway = { path = "crates/forge-gateway" }
forge-mcp = { path = "crates/forge-mcp" }
forge-cli = { path = "crates/forge-cli" }
forge-test-utils = { path = "crates/forge-test-utils" }
