[package]
name = "forge-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "codeforge"
path = "src/main.rs"

[dependencies]
forge-core = { workspace = true }
forge-tools = { workspace = true }
forge-memory = { workspace = true }
forge-model = { workspace = true }
forge-permissions = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
forge-test-utils = { workspace = true }
async-trait = { workspace = true }
