[package]
name = "forge-model"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-core = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
