[package]
name = "forge-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
forge-core = { workspace = true }
forge-permissions = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
